--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 <body>
   <div class="container">
     <div class="one">
+
       <h1 class="one">Hey
         <span id="name">Dipika...</span>
       </h1>
       <p class="two" id="greetingText">It's very special day for all btw!</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!!</p>
+      <p>It's 2081/01/23 (2024/05/06), Your birthday!!!</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy returns of your day</p>
+        <p class="hbd-chatbox">Happy birthday to you sister!! Many many happy returns of your day😍</p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -56,23 +57,10 @@
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon2.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon3.svg" alt="">
-        <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon3.svg" alt="">
         <img src="img/ballon2.svg" alt="">
@@ -83,6 +71,19 @@
         <img src="img/ballon1.svg" alt="">
         <img src="img/ballon2.svg" alt="">
         <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
+        <img src="img/ballon1.svg" alt="">
+        <img src="img/ballon2.svg" alt="">
+        <img src="img/ballon3.svg" alt="">
         <img src="img/ballon3.svg" alt="">
       </div>
     </div>
