--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="nine">
       <p>Hope you enjoyed this:)</p>
       <p>
-        Happy Birthday, dear sister! You're not just a sister to me, but also a guardian who's always been there for me. Your love, support, and guidance mean the world to me. Wishing you a day filled with joy and happiness. Love you!
+        Happy Birthday, dear sister! You're not just a sister to me, but also a guardian who's always been there for me. Your love, support, and guidance mean the world to me. Wishing you a day filled with joy and happiness.
       </p>
       <p id="replay">Or click me, if you want to watch it again.</p>
       <p class="last-smile">:)</p>
